Реализован контроллер работы с пользователями и библиотека взаимодейтсвия с БД.

--- a/dotnet/Calendar.Api/appsettings.json
+++ b/dotnet/Calendar.Api/appsettings.json
@@ -1,8 +1,26 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=192.168.1.179; Initial Catalog=Development; Integrated Security=False; User ID=Developer;Password=Dev001$;"
+    /* "DefaultConnection": "Data Source=<<SQL Server>>; Initial Catalog=<<Data Base>>; Integrated Security=False; User ID=<<UserName>>;Password=<<Password>>;" */
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "SqlQueries": [
+    {
+      "Name": "Staff",
+      "Query": "SELECT stf.Id, stf.Name, stf.ColorId FROM Calendar.StaffView AS stf"
+    },
+    {
+      "Name": "StaffInsert",
+      "Query": "INSERT INTO Calendar.StaffView (Name, ColorId) Values (@Name, @ColorId)"
+    },
+    {
+      "Name": "StaffUpdate",
+      "Query": "UPDATE stf SET stf.Name = @Name, stf.ColorId = @ColorId FROM Calendar.StaffView AS stf WHERE stf.Id = @Id"
+    }
+  ]
 }
