--- a/dotnet/Calendar.Api/appsettings.json
+++ b/dotnet/Calendar.Api/appsettings.json
@@ -16,11 +16,15 @@
     },
     {
       "Name": "StaffInsert",
-      "Query": "INSERT INTO Calendar.StaffView (Name, ColorId) Values (@Name, @ColorId)"
+      "Query": "INSERT INTO Calendar.Staff (Name, ColorId) Values (@Name, @ColorId)"
     },
     {
       "Name": "StaffUpdate",
-      "Query": "UPDATE stf SET stf.Name = @Name, stf.ColorId = @ColorId FROM Calendar.StaffView AS stf WHERE stf.Id = @Id"
+      "Query": "UPDATE stf SET stf.Name = @Name, stf.ColorId = @ColorId FROM Calendar.Staff AS stf WHERE stf.Id = @Id"
+    },
+    {
+      "Name": "StaffDelete",
+      "Query": "DELETE FROM Calendar.Staff WHERE Id = @Id"
     }
   ]
 }
