Реализовано автоматическое обновление данных в отдельном потоке.

--- a/dotnet/Calendar.Api/appsettings.json
+++ b/dotnet/Calendar.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=192.168.1.179; Initial Catalog=Development; Integrated Security=False; User ID=Developer;Password=Dev001$;"
+    "DefaultConnection": "Data Source=192.168.1.179; Initial Catalog=Development; Integrated Security=False; User ID=Developer;Password=123!@#qwE;"
     /* "DefaultConnection": "Data Source=<<SQL Server>>; Initial Catalog=<<Data Base>>; Integrated Security=False; User ID=<<UserName>>;Password=<<Password>>;" */
   },
   "Logging": {
