--- a/dotnet/Calendar.Client/packages.config
+++ b/dotnet/Calendar.Client/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net47" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net47" />
+  <package id="RestSharp" version="106.6.7" targetFramework="net47" />
   <package id="ShowMeTheXAML" version="1.0.12" targetFramework="net47" />
   <package id="ShowMeTheXAML.MSBuild" version="1.0.12" targetFramework="net47" />
 </packages>
